[package]
name = "libp2p-broadcast"
version = "0.12.0"
authors = ["David Craven <david@craven.ch>", "Actyx AG"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Broadcast messages to connected peers"
repository = "https://github.com/ipfs-rust/libp2p-broadcast"

[dependencies]
fnv = "1.0.7"
futures = "0.3.30"
libp2p = "0.53.2"
unsigned-varint = { version = "0.8.0", features = ["futures"] }

[dev-dependencies]
futures = { version = "0.3.30", features = ["executor"] }
